# mm-iot-zephyr

./: .gitmodules  CMakeLists.txt
components/firmware/: CMakeLists.txt
components/libmorse/: CMakeLists.txt
drivers/wifi/morse/: Kconfig.morse  morse.c  morse.h
drivers/wifi/morse/shims/: mmosal_shim_zephyr.c  wlan_hal.c
